# llm-functions

./: .gitignore  Cargo.toml  README.md  schema.json
llm-functions-examples/: Cargo.toml
llm-functions-examples/src/: main.rs
src/: device.rs  functions.rs  generator.rs  lib.rs  load_statesensors.rs  model.rs  models.rs  prompter.rs  token_output_stream.rs
src/models/: lib.rs  mixtral.rs  params.rs  quantized_mistral.rs
